package ability;

public interface Drawable {

    void draw();
}
