package application;

public enum GameState {
    MAIN_MENU, PLAYING, HOW_TO_PLAY, ENEMIES_INFO, ITEMS_INFO
}
